Did some code clean up as described and found by pmd.