@@ -74,7 +74,7 @@ public class NumberConstantMungeComponent extends AbstractMungeComponent {
 			}
         });
         
-        retNull.setSelected(new Boolean(getStep().getParameter(StringConstantMungeStep.RETURN_NULL)).booleanValue());
+        retNull.setSelected(Boolean.valueOf(getStep().getParameter(StringConstantMungeStep.RETURN_NULL)).booleanValue());
         valueField.setEnabled(!retNull.isSelected());
         
         FormLayout layout = new FormLayout("pref,4dlu,pref:grow");
